Add rootnamespace to match naming-structure of namespace.

--- a/src/MvcClient/MvcClient.csproj
+++ b/src/MvcClient/MvcClient.csproj
@@ -2,6 +2,7 @@
 
 	<PropertyGroup>
 		<TargetFramework>net6.0</TargetFramework>
+		<RootNamespace>ClubApp.MvcClient</RootNamespace>
 		<Nullable>enable</Nullable>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<UserSecretsId>aspnet-MvcClient-A1B705EE-C8E4-4146-8F2A-DB07722B3CDD</UserSecretsId>
