Create Post DbContext ans register as a servces for DI

--- a/src/MvcClient/appsettings.json
+++ b/src/MvcClient/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "AppIdentityDbContext": "Server=(localdb)\\mssqllocaldb;Database=ClubApp-AppIdentityDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "AppIdentityDbContext": "Server=(localdb)\\mssqllocaldb;Database=ClubApp-AppIdentityDb;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=ClubAppDb;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
