--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -9,6 +9,7 @@
 
 	<ItemGroup>
 	  <PackageReference Include="Ardalis.Specification" Version="6.0.1" />
+	  <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.1" />
 	</ItemGroup>
 
 </Project>
